--- a/.github/workflows/KMMBridge-publish.yml
+++ b/.github/workflows/KMMBridge-publish.yml
@@ -7,5 +7,5 @@ on:
 jobs:
   call-kmmbridge-publish:
     uses: touchlab/KMMBridgeGithubWorkflow/.github/workflows/faktorybuildbranches.yml@v0.8
-#    secrets:
-#      PODSPEC_SSH_KEY: ${{ secrets.PODSPEC_SSH_KEY }}
+    secrets:
+      GITHUB_TOKEN: ${{ secrets.KMMTOKEN }}
